blog-deploy/n_blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fabsgoblog-svc
  labels:
    app: fabsgoblog
spec:
  selector:
    app: fabsgoblog
  ports:
    - protocol: TCP
      port: 8019
      targetPort: 8019
