blog-deploy/6_blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  rules:
  - host: "fedblog.raketo.info"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fabsgoblog
            port:
              number: 8019
