blog-deploy/fed_blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fed-blog-ingress
spec:
  rules:
  - host: "fabs2.raketo.info"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fabsgoblog-svc
            port:
              number: 8019
